// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook snapshot tests Storyshots ACS Components/CameraSettings Camera Settings 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        className="ms-Dropdown-container"
      >
        <label
          className="ms-Label ms-Dropdown-label label-19"
          id="Dropdown2-label"
        >
          Camera
        </label>
        <div
          aria-disabled={false}
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="Dropdown2-label Dropdown2-option"
          className="ms-Dropdown dropdown-3"
          data-is-focusable={true}
          id="Dropdown2"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <span
            aria-atomic={true}
            aria-invalid={false}
            aria-live="polite"
            aria-posinset={1}
            aria-selected={true}
            aria-setsize={3}
            className="ms-Dropdown-title title-4"
            id="Dropdown2-option"
            role="option"
          >
            Logitech WebCam
          </span>
          <span
            className="ms-Dropdown-caretDownWrapper caretDownWrapper-5"
          >
            <i
              aria-hidden={true}
              className="root-37 ms-Dropdown-caretDown caretDown-21"
              data-icon-name="ChevronDown"
            >
              
            </i>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ControlBar Control Bar Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        className="ms-Stack css-3"
      >
        <button
          className="ms-Button ms-Button--default root-6"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-7"
            data-automationid="splitbuttonprimary"
          >
            <span
              aria-hidden="true"
              className="ui-icon al am an"
              role="img"
            >
              <svg
                className="ao ap aq ar as"
                focusable="false"
                role="presentation"
                viewBox="2 2 16 16"
              >
                <path
                  className="ui-icon__outline at"
                  d="M4.5 4C3.11929 4 2 5.11929 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H11.5C12.8807 16 14 14.8807 14 13.5V12.5L16.4 14.3C17.0592 14.7944 18 14.324 18 13.5V6.49998C18 5.67594 17.0592 5.20556 16.4 5.69998L14 7.49998V6.5C14 5.11929 12.8807 4 11.5 4H4.5ZM14 8.74998L17 6.49998V13.5L14 11.25V8.74998ZM13 6.5V13.5C13 14.3284 12.3284 15 11.5 15H4.5C3.67157 15 3 14.3284 3 13.5V6.5C3 5.67157 3.67157 5 4.5 5H11.5C12.3284 5 13 5.67157 13 6.5Z"
                />
                <g
                  className="ui-icon__filled"
                >
                  <path
                    d="M13 6.5C13 5.11929 11.8807 4 10.5 4H4.5C3.11929 4 2 5.11929 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H10.5C11.8807 16 13 14.8807 13 13.5V6.5Z"
                  />
                  <path
                    d="M14 7.93082V12.0815L16.7642 14.4319C17.2512 14.8461 18 14.4999 18 13.8606V6.19315C18 5.55685 17.2575 5.20962 16.7692 5.61756L14 7.93082Z"
                  />
                </g>
              </svg>
            </span>
            <div
              className="ms-Stack css-14"
            />
          </span>
        </button>
        <button
          className="ms-Button ms-Button--default root-6"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-7"
            data-automationid="splitbuttonprimary"
          >
            <span
              aria-hidden="true"
              className="ui-icon al am an"
              role="img"
            >
              <svg
                className="ao ap aq ar as"
                focusable="false"
                role="presentation"
                viewBox="2 2 16 16"
              >
                <g
                  className="ui-icon__outline at"
                >
                  <path
                    d="M10 13C11.6569 13 13 11.6569 13 10V5.00002C13 3.34316 11.6569 2.00002 10 2.00002C8.34315 2.00002 7 3.34316 7 5.00001V10C7 11.6569 8.34315 13 10 13ZM10 12C8.89543 12 8 11.1046 8 10V5.00001C8 3.89545 8.89543 3.00001 10 3.00002C11.1046 3.00002 12 3.89545 12 5.00002V10C12 11.1046 11.1046 12 10 12Z"
                  />
                  <path
                    d="M5 9.5C5.27614 9.5 5.5 9.72386 5.5 10C5.5 12.4853 7.51472 14.5 10 14.5C12.4853 14.5 14.5 12.4853 14.5 10C14.5 9.72386 14.7239 9.5 15 9.5C15.2761 9.5 15.5 9.72386 15.5 10C15.5 12.869 13.3033 15.225 10.5 15.4776V17.5C10.5 17.7761 10.2761 18 10 18C9.72386 18 9.5 17.7761 9.5 17.5V15.4776C6.69675 15.225 4.5 12.869 4.5 10C4.5 9.72386 4.72386 9.5 5 9.5Z"
                  />
                </g>
                <g
                  className="ui-icon__filled"
                >
                  <path
                    d="M5.5 10C5.5 9.72386 5.27614 9.5 5 9.5C4.72386 9.5 4.5 9.72386 4.5 10C4.5 12.869 6.69675 15.225 9.5 15.4776V17.5C9.5 17.7761 9.72386 18 10 18C10.2761 18 10.5 17.7761 10.5 17.5V15.4776C13.3033 15.225 15.5 12.869 15.5 10C15.5 9.72386 15.2761 9.5 15 9.5C14.7239 9.5 14.5 9.72386 14.5 10C14.5 12.4853 12.4853 14.5 10 14.5C7.51472 14.5 5.5 12.4853 5.5 10Z"
                  />
                  <path
                    d="M13 10.0008C12.9996 11.6573 11.6566 13 10 13C8.34315 13 7 11.6569 7 10V5.00002C7 3.34316 8.34315 2.00002 10 2.00002C11.6569 2.00002 13 3.34316 13 5.00002V10.0008Z"
                  />
                </g>
              </svg>
            </span>
            <div
              className="ms-Stack css-14"
            />
          </span>
        </button>
        <button
          className="ms-Button ms-Button--default root-6"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-7"
            data-automationid="splitbuttonprimary"
          >
            <span
              aria-hidden="true"
              className="ui-icon al am an"
              role="img"
            >
              <svg
                className="ao ap aq ar as"
                focusable="false"
                role="presentation"
                viewBox="2 2 16 16"
              >
                <g
                  className="ui-icon__outline at"
                >
                  <path
                    d="M10 14C9.72386 14 9.5 13.7761 9.5 13.5L9.5 7.7071L7.85355 9.35355C7.65829 9.54882 7.34171 9.54882 7.14645 9.35355C6.95118 9.15829 6.95118 8.84171 7.14645 8.64645L9.64645 6.14645C9.84171 5.95118 10.1583 5.95118 10.3536 6.14645L12.8536 8.64645C13.0488 8.84171 13.0488 9.15829 12.8536 9.35355C12.6583 9.54882 12.3417 9.54882 12.1464 9.35355L10.5 7.70711L10.5 13.5C10.5 13.7761 10.2761 14 10 14Z"
                  />
                  <path
                    d="M2 6C2 4.89543 2.89543 4 4 4H16C17.1046 4 18 4.89543 18 6V14C18 15.1046 17.1046 16 16 16H4C2.89543 16 2 15.1046 2 14V6ZM4 5C3.44772 5 3 5.44772 3 6V14C3 14.5523 3.44772 15 4 15H16C16.5523 15 17 14.5523 17 14V6C17 5.44772 16.5523 5 16 5H4Z"
                  />
                </g>
                <path
                  className="ui-icon__filled"
                  d="M4 4C2.89543 4 2 4.89543 2 6V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V6C18 4.89543 17.1046 4 16 4H4ZM10 14C9.72386 14 9.5 13.7761 9.5 13.5L9.5 7.7071L7.85355 9.35355C7.65829 9.54882 7.34171 9.54882 7.14645 9.35355C6.95118 9.15829 6.95118 8.84171 7.14645 8.64645L9.64645 6.14645C9.84171 5.95118 10.1583 5.95118 10.3536 6.14645L12.8536 8.64645C13.0488 8.84171 13.0488 9.15829 12.8536 9.35355C12.6583 9.54882 12.3417 9.54882 12.1464 9.35355L10.5 7.70711L10.5 13.5C10.5 13.7761 10.2761 14 10 14Z"
                />
              </svg>
            </span>
            <div
              className="ms-Stack css-14"
            />
          </span>
        </button>
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-owns={null}
          className="ms-Button ms-Button--default ms-Button--hasMenu root-6"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-7"
            data-automationid="splitbuttonprimary"
          >
            <span
              aria-hidden="true"
              className="ui-icon al am an"
              role="img"
            >
              <svg
                className="ao ap aq ar as"
                focusable="false"
                role="presentation"
                viewBox="2 2 16 16"
              >
                <g
                  className="ui-icon__filled"
                >
                  <path
                    d="M6.5 10C6.5 10.9665 5.7165 11.75 4.75 11.75C3.7835 11.75 3 10.9665 3 10C3 9.0335 3.7835 8.25 4.75 8.25C5.7165 8.25 6.5 9.0335 6.5 10Z"
                  />
                  <path
                    d="M17 10C17 10.9665 16.2165 11.75 15.25 11.75C14.2835 11.75 13.5 10.9665 13.5 10C13.5 9.0335 14.2835 8.25 15.25 8.25C16.2165 8.25 17 9.0335 17 10Z"
                  />
                  <path
                    d="M10 11.75C10.9665 11.75 11.75 10.9665 11.75 10C11.75 9.0335 10.9665 8.25 10 8.25C9.0335 8.25 8.25 9.0335 8.25 10C8.25 10.9665 9.0335 11.75 10 11.75Z"
                  />
                </g>
                <g
                  className="ui-icon__outline at"
                >
                  <path
                    d="M6 10C6 10.6904 5.44036 11.25 4.75 11.25C4.05964 11.25 3.5 10.6904 3.5 10C3.5 9.30964 4.05964 8.75 4.75 8.75C5.44036 8.75 6 9.30964 6 10Z"
                  />
                  <path
                    d="M11.25 10C11.25 10.6904 10.6904 11.25 10 11.25C9.30964 11.25 8.75 10.6904 8.75 10C8.75 9.30964 9.30964 8.75 10 8.75C10.6904 8.75 11.25 9.30964 11.25 10Z"
                  />
                  <path
                    d="M15.25 11.25C15.9404 11.25 16.5 10.6904 16.5 10C16.5 9.30964 15.9404 8.75 15.25 8.75C14.5596 8.75 14 9.30964 14 10C14 10.6904 14.5596 11.25 15.25 11.25Z"
                  />
                </g>
              </svg>
            </span>
            <div
              className="ms-Stack css-14"
            />
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-15 ms-Button-menuIcon menuIcon-11"
              data-icon-name="ChevronDown"
              hidden={true}
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons\\"",
                }
              }
            >
              
            </i>
          </span>
        </button>
        <button
          className="ms-Button ms-Button--default root-18"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-7"
            data-automationid="splitbuttonprimary"
          >
            <span
              aria-hidden="true"
              className="ui-icon al am an"
              role="img"
            >
              <svg
                className="ao ap aq ar as"
                focusable="false"
                role="presentation"
                viewBox="2 2 16 16"
              >
                <path
                  className="ui-icon__outline at"
                  d="M10 6.00001C13.3317 5.99572 15.5858 7.2756 17.154 8.65976C17.8139 9.2422 18.116 10.1179 17.9594 10.94L17.8015 11.7692C17.6535 12.5461 16.9272 13.0679 16.1042 12.9884L14.4666 12.8302C13.753 12.7613 13.2241 12.2401 13 11.5001C12.6957 10.4953 12.5 9.75009 12.5 9.75009C11.7522 9.44357 11.0138 9.25005 10 9.25005C8.98623 9.25005 8.26225 9.46492 7.5 9.75009C7.5 9.75009 7.29566 10.496 7 11.5001C6.80244 12.171 6.49595 12.7567 5.79708 12.8269L4.16895 12.9905C3.35656 13.0722 2.57765 12.5555 2.3467 11.7818L2.09921 10.9526C1.85286 10.1273 2.0727 9.25869 2.67633 8.67245C4.10141 7.28843 6.67315 6.00433 10 6.00001ZM13.4754 9.52689L13.5008 9.62157C13.5232 9.70474 13.5565 9.82664 13.5991 9.97972C13.6846 10.2861 13.8075 10.7163 13.9571 11.2102C14.0936 11.661 14.3462 11.8139 14.5628 11.8348L16.2004 11.993C16.5457 12.0264 16.7746 11.816 16.8191 11.5821L16.9771 10.7529C17.0653 10.2894 16.8963 9.76613 16.4923 9.40948C15.0673 8.1517 13.0404 6.9961 10.0013 7.00001C6.92594 7.00401 4.60599 8.19238 3.37303 9.38982C3.04458 9.70881 2.9145 10.1877 3.05744 10.6666L3.30493 11.4957C3.39647 11.8024 3.72575 12.03 4.06896 11.9955L5.69709 11.8319C5.73551 11.8281 5.74859 11.8203 5.7511 11.8189C5.75521 11.8165 5.77275 11.8057 5.80155 11.7692C5.8711 11.6811 5.9536 11.5135 6.04073 11.2176C6.18728 10.7199 6.31122 10.2861 6.39847 9.97694C6.44208 9.82241 6.47648 9.69914 6.49992 9.61474L6.52663 9.51827C6.62916 9.15132 6.98467 8.89552 7.14961 8.81349C7.96877 8.50703 8.81921 8.25005 10 8.25005C11.1653 8.25005 12.0327 8.47779 12.8793 8.8248C13.0313 8.88736 13.3617 9.10921 13.4672 9.4961L13.4691 9.50315L13.4754 9.52689Z"
                />
                <path
                  className="ui-icon__filled"
                  d="M17.9594 10.94L17.8015 11.7691C17.6535 12.546 16.9272 13.0678 16.1042 12.9883L14.4666 12.8301C13.753 12.7612 13.2241 12.24 13 11.5C12.6957 10.4952 12.5 9.75 12.5 9.75C11.7522 9.44348 11.0138 9.24996 10 9.24996C8.98623 9.24996 8.26225 9.46483 7.5 9.75C7.5 9.75 7.29566 10.4959 7 11.5C6.80244 12.1709 6.49595 12.7566 5.79708 12.8268L4.16895 12.9904C3.35656 13.0721 2.57765 12.5554 2.3467 11.7817L2.09921 10.9525C1.85286 10.1272 2.0727 9.2586 2.67633 8.67236C4.10141 7.28834 6.6656 6.50821 9.99245 6.50389C13.3241 6.4996 15.5858 7.27551 17.154 8.65967C17.8139 9.24211 18.116 10.1178 17.9594 10.94Z"
                />
              </svg>
            </span>
            <div
              className="ms-Stack css-19"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ErrorBar Error Bar Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        aria-describedby="MessageBar0"
        className="ms-MessageBar ms-MessageBar--error ms-MessageBar-singleline ms-MessageBar-dismissalSingleLine root-2"
        role="region"
      >
        <div
          className="ms-MessageBar-content content-3"
        >
          <div
            aria-hidden={true}
            className="ms-MessageBar-icon iconContainer-4"
          >
            <i
              aria-hidden={true}
              className="root-37 icon-12"
              data-icon-name="ErrorBadge"
            >
              
            </i>
          </div>
          <div
            aria-live="assertive"
            className="ms-MessageBar-text text-6"
            id="MessageBar0"
            role="status"
          >
            <span
              className="ms-MessageBar-innerText innerText-7"
            />
          </div>
          <div
            className="ms-MessageBar-dismissSingleLine"
          >
            <button
              aria-label="Close"
              className="ms-Button ms-Button--icon ms-MessageBar-dismissal dismissal-13"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Close"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-14"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-21 ms-Button-icon icon-16"
                  data-icon-name="Clear"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/GridLayout Grid Layout Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        style={
          Object {
            "height": "500px",
            "width": "600px",
          }
        }
      >
        <div
          className="css-71"
          style={
            Object {
              "gridTemplateColumns": "repeat(2, 1fr)",
              "gridTemplateRows": "repeat(2, minmax(0, 1fr))",
            }
          }
        >
          <div
            className="ms-Stack css-74 css-2"
          >
            <div
              className="ms-Stack css-75 css-3"
            >
              <div
                className="ms-Persona ms-Persona--size100 root-4"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-11"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-13"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-16"
                    >
                      <i
                        aria-hidden={true}
                        className="root-37 root-18"
                        data-icon-name="Contact"
                      >
                        
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="ms-Label css-73 root-21"
            >
              Michael
            </label>
          </div>
          <div
            className="ms-Stack css-74 css-2"
          >
            <div
              className="ms-Stack css-75 css-3"
            >
              <div
                className="ms-Persona ms-Persona--size100 root-4"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-11"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-13"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-16"
                    >
                      <i
                        aria-hidden={true}
                        className="root-37 root-18"
                        data-icon-name="Contact"
                      >
                        
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="ms-Label css-73 root-21"
            >
              Jim
            </label>
          </div>
          <div
            className="ms-Stack css-74 css-2"
          >
            <div
              className="ms-Stack css-75 css-3"
            >
              <div
                className="ms-Persona ms-Persona--size100 root-4"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-11"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-13"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-16"
                    >
                      <i
                        aria-hidden={true}
                        className="root-37 root-18"
                        data-icon-name="Contact"
                      >
                        
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="ms-Label css-73 root-21"
            >
              Pam
            </label>
          </div>
          <div
            className="ms-Stack css-74 css-2"
          >
            <div
              className="ms-Stack css-75 css-3"
            >
              <div
                className="ms-Persona ms-Persona--size100 root-4"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-11"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-13"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-16"
                    >
                      <i
                        aria-hidden={true}
                        className="root-37 root-18"
                        data-icon-name="Contact"
                      >
                        
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              className="ms-Label css-73 root-21"
            >
              Dweight
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/IncomingCallModal Incoming Call Modal Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <span
        className="ms-layer"
      >
        <div
          className="ms-Fabric ms-Layer-content content-11"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onDrag={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragExit={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onSubmit={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-labelledby="Dialog0-title"
            aria-modal={true}
            onKeyDown={[Function]}
            role="alertdialog"
            style={
              Object {
                "outline": "none",
                "overflowY": undefined,
              }
            }
          >
            <div
              className="ms-Modal is-open ms-Dialog root-4"
              role="document"
            >
              <div
                className="ms-Overlay ms-Overlay--dark root-13"
              />
              <div
                className="ms-Dialog-main main-5"
                data-id="Modal1"
                onBlur={[Function]}
                onFocus={[Function]}
                onFocusCapture={[Function]}
              >
                <div
                  aria-hidden={true}
                  data-is-visible={true}
                  onFocus={[Function]}
                  style={
                    Object {
                      "pointerEvents": "none",
                      "position": "fixed",
                    }
                  }
                  tabIndex={0}
                />
                <div
                  className="ms-Modal-scrollableContent scrollableContent-6"
                  data-is-scrollable={true}
                >
                  <div
                    className="content-14"
                  >
                    <div
                      className="ms-Dialog-header header-16"
                    >
                      <div
                        aria-level={1}
                        className="ms-Dialog-title title-19"
                        id="Dialog0-title"
                        role="heading"
                      >
                        Incoming Video Call
                      </div>
                      <div
                        className="topButton-20"
                      >
                        <button
                          aria-label="Close"
                          className="ms-Button ms-Button--icon ms-Dialog-button ms-Dialog-button--close root-21"
                          data-is-focusable={true}
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          title="Close"
                          type="button"
                        >
                          <span
                            className="ms-Button-flexContainer flexContainer-22"
                            data-automationid="splitbuttonprimary"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-29 ms-Button-icon icon-24"
                              data-icon-name="Cancel"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      className="ms-Dialog-inner inner-17"
                    >
                      <div
                        className="ms-Dialog-content innerContent-18"
                      >
                        <div
                          className="ms-Stack css-30"
                        >
                          <div
                            className="ms-Stack css-31"
                            style={
                              Object {
                                "marginRight": "0.5rem",
                              }
                            }
                          >
                            <div
                              aria-label="Maximus Aurelius"
                              className="ms-Persona ms-Persona--size40 root-32"
                            >
                              <div
                                className="ms-Persona-coin ms-Persona--size40 coin-39"
                                role="presentation"
                              >
                                <div
                                  className="ms-Persona-imageArea imageArea-41"
                                  role="presentation"
                                >
                                  <div
                                    aria-hidden="true"
                                    className="ms-Persona-initials initials-44"
                                  >
                                    <span>
                                      MA
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="ms-Stack css-47"
                            style={
                              Object {
                                "alignItems": "flex-start",
                              }
                            }
                          >
                            <div
                              className="ms-Stack css-48"
                              style={
                                Object {
                                  "color": "#000000",
                                  "fontSize": "0.875rem",
                                  "fontWeight": "bold",
                                }
                              }
                            >
                              <span>
                                Maximus Aurelius
                                <span
                                  style={
                                    Object {
                                      "marginLeft": "0.2rem",
                                      "opacity": 0.5,
                                    }
                                  }
                                >
                                   • 
                                  1st
                                </span>
                              </span>
                            </div>
                            <div
                              className="ms-Stack css-48"
                              style={
                                Object {
                                  "color": "#201f1e",
                                  "fontSize": "0.75rem",
                                }
                              }
                            >
                              <span>
                                Emperor and Philosopher, Rome
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          className="ms-Stack css-82 css-48"
                        >
                          <div
                            className="ms-Stack css-74 css-49"
                          >
                            <div
                              className="css-76"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        className="ms-Dialog-actions actions-50"
                      >
                        <div
                          className="ms-Dialog-actionsRight actionsRight-52"
                        >
                          <span
                            className="ms-Dialog-action action-51"
                          >
                            <button
                              className="ms-Button ms-Button--default root-53"
                              data-is-focusable={true}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseUp={[Function]}
                              style={
                                Object {
                                  "background": "#faf9f8",
                                  "border": "none",
                                }
                              }
                              type="button"
                            >
                              <span
                                className="ms-Button-flexContainer flexContainer-22"
                                data-automationid="splitbuttonprimary"
                              >
                                <span
                                  aria-hidden="true"
                                  className="ui-icon al am an"
                                  role="img"
                                >
                                  <svg
                                    className="ao au av ar as"
                                    focusable="false"
                                    role="presentation"
                                    viewBox="2 2 16 16"
                                  >
                                    <path
                                      className="ui-icon__outline at"
                                      d="M4.5 4C3.11929 4 2 5.11929 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H11.5C12.8807 16 14 14.8807 14 13.5V12.5L16.4 14.3C17.0592 14.7944 18 14.324 18 13.5V6.49998C18 5.67594 17.0592 5.20556 16.4 5.69998L14 7.49998V6.5C14 5.11929 12.8807 4 11.5 4H4.5ZM14 8.74998L17 6.49998V13.5L14 11.25V8.74998ZM13 6.5V13.5C13 14.3284 12.3284 15 11.5 15H4.5C3.67157 15 3 14.3284 3 13.5V6.5C3 5.67157 3.67157 5 4.5 5H11.5C12.3284 5 13 5.67157 13 6.5Z"
                                    />
                                    <g
                                      className="ui-icon__filled"
                                    >
                                      <path
                                        d="M13 6.5C13 5.11929 11.8807 4 10.5 4H4.5C3.11929 4 2 5.11929 2 6.5V13.5C2 14.8807 3.11929 16 4.5 16H10.5C11.8807 16 13 14.8807 13 13.5V6.5Z"
                                      />
                                      <path
                                        d="M14 7.93082V12.0815L16.7642 14.4319C17.2512 14.8461 18 14.4999 18 13.8606V6.19315C18 5.55685 17.2575 5.20962 16.7692 5.61756L14 7.93082Z"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </span>
                            </button>
                          </span>
                          <span
                            className="ms-Dialog-action action-51"
                          >
                            <button
                              className="ms-Button ms-Button--primary root-55"
                              data-is-focusable={true}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseUp={[Function]}
                              style={
                                Object {
                                  "background": "#107c10",
                                  "border": "none",
                                }
                              }
                              type="button"
                            >
                              <span
                                className="ms-Button-flexContainer flexContainer-22"
                                data-automationid="splitbuttonprimary"
                              >
                                <span
                                  style={
                                    Object {
                                      "fontFamily": "Segoe UI Semibold",
                                    }
                                  }
                                >
                                  Accept
                                </span>
                              </span>
                            </button>
                          </span>
                          <span
                            className="ms-Dialog-action action-51"
                          >
                            <button
                              className="ms-Button ms-Button--default root-53"
                              data-is-focusable={true}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseUp={[Function]}
                              style={
                                Object {
                                  "background": "#a4262c",
                                  "border": "none",
                                  "color": "#ffffff",
                                }
                              }
                              type="button"
                            >
                              <span
                                className="ms-Button-flexContainer flexContainer-22"
                                data-automationid="splitbuttonprimary"
                              >
                                <span
                                  className="ms-Button-textContainer textContainer-23"
                                >
                                  <span
                                    className="ms-Button-label label-54"
                                    id="id__11"
                                  >
                                    Decline
                                  </span>
                                </span>
                              </span>
                            </button>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  data-is-visible={true}
                  onFocus={[Function]}
                  style={
                    Object {
                      "pointerEvents": "none",
                      "position": "fixed",
                    }
                  }
                  tabIndex={0}
                />
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/IncomingCallToast Incoming Call Toast Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        className="ms-Stack css-78 css-2"
      >
        <div
          className="ms-Stack css-79 css-3"
        >
          <div
            aria-label="John Doe"
            className="ms-Persona ms-Persona--size40 root-4"
          >
            <div
              className="ms-Persona-coin ms-Persona--size40 coin-11"
              role="presentation"
            >
              <div
                className="ms-Persona-imageArea imageArea-13"
                role="presentation"
              >
                <div
                  aria-hidden="true"
                  className="ms-Persona-initials initials-16"
                >
                  <span>
                    JD
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Stack css-19"
          style={
            Object {
              "alignItems": "flex-start",
              "fontFamily": "Segoe UI",
            }
          }
        >
          <div
            className="ms-Stack css-20"
            style={
              Object {
                "color": "#000000",
                "fontSize": "0.875rem",
              }
            }
          >
            <b>
              John Doe
            </b>
          </div>
          <div
            className="ms-Stack css-20"
            style={
              Object {
                "color": "#000000",
                "fontSize": "0.75rem",
              }
            }
          >
            <span>
              Incoming Call
            </span>
          </div>
        </div>
        <div
          className="ms-Stack css-21"
        >
          <button
            className="ms-Button ms-Button--default css-81 root-22"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-23"
              data-automationid="splitbuttonprimary"
            >
              <span
                aria-hidden="true"
                className="ui-icon al am an"
                role="img"
              >
                <svg
                  className="ao ap aq ar as"
                  focusable="false"
                  role="presentation"
                  viewBox="2 2 16 16"
                >
                  <path
                    className="ui-icon__outline at"
                    d="M10 6.00001C13.3317 5.99572 15.5858 7.2756 17.154 8.65976C17.8139 9.2422 18.116 10.1179 17.9594 10.94L17.8015 11.7692C17.6535 12.5461 16.9272 13.0679 16.1042 12.9884L14.4666 12.8302C13.753 12.7613 13.2241 12.2401 13 11.5001C12.6957 10.4953 12.5 9.75009 12.5 9.75009C11.7522 9.44357 11.0138 9.25005 10 9.25005C8.98623 9.25005 8.26225 9.46492 7.5 9.75009C7.5 9.75009 7.29566 10.496 7 11.5001C6.80244 12.171 6.49595 12.7567 5.79708 12.8269L4.16895 12.9905C3.35656 13.0722 2.57765 12.5555 2.3467 11.7818L2.09921 10.9526C1.85286 10.1273 2.0727 9.25869 2.67633 8.67245C4.10141 7.28843 6.67315 6.00433 10 6.00001ZM13.4754 9.52689L13.5008 9.62157C13.5232 9.70474 13.5565 9.82664 13.5991 9.97972C13.6846 10.2861 13.8075 10.7163 13.9571 11.2102C14.0936 11.661 14.3462 11.8139 14.5628 11.8348L16.2004 11.993C16.5457 12.0264 16.7746 11.816 16.8191 11.5821L16.9771 10.7529C17.0653 10.2894 16.8963 9.76613 16.4923 9.40948C15.0673 8.1517 13.0404 6.9961 10.0013 7.00001C6.92594 7.00401 4.60599 8.19238 3.37303 9.38982C3.04458 9.70881 2.9145 10.1877 3.05744 10.6666L3.30493 11.4957C3.39647 11.8024 3.72575 12.03 4.06896 11.9955L5.69709 11.8319C5.73551 11.8281 5.74859 11.8203 5.7511 11.8189C5.75521 11.8165 5.77275 11.8057 5.80155 11.7692C5.8711 11.6811 5.9536 11.5135 6.04073 11.2176C6.18728 10.7199 6.31122 10.2861 6.39847 9.97694C6.44208 9.82241 6.47648 9.69914 6.49992 9.61474L6.52663 9.51827C6.62916 9.15132 6.98467 8.89552 7.14961 8.81349C7.96877 8.50703 8.81921 8.25005 10 8.25005C11.1653 8.25005 12.0327 8.47779 12.8793 8.8248C13.0313 8.88736 13.3617 9.10921 13.4672 9.4961L13.4691 9.50315L13.4754 9.52689Z"
                  />
                  <path
                    className="ui-icon__filled"
                    d="M17.9594 10.94L17.8015 11.7691C17.6535 12.546 16.9272 13.0678 16.1042 12.9883L14.4666 12.8301C13.753 12.7612 13.2241 12.24 13 11.5C12.6957 10.4952 12.5 9.75 12.5 9.75C11.7522 9.44348 11.0138 9.24996 10 9.24996C8.98623 9.24996 8.26225 9.46483 7.5 9.75C7.5 9.75 7.29566 10.4959 7 11.5C6.80244 12.1709 6.49595 12.7566 5.79708 12.8268L4.16895 12.9904C3.35656 13.0721 2.57765 12.5554 2.3467 11.7817L2.09921 10.9525C1.85286 10.1272 2.0727 9.2586 2.67633 8.67236C4.10141 7.28834 6.6656 6.50821 9.99245 6.50389C13.3241 6.4996 15.5858 7.27551 17.154 8.65967C17.8139 9.24211 18.116 10.1178 17.9594 10.94Z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--default css-80 root-22"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-23"
              data-automationid="splitbuttonprimary"
            >
              <span
                aria-hidden="true"
                className="ui-icon al am an"
                role="img"
              >
                <svg
                  className="ao ap aq ar as"
                  focusable="false"
                  role="presentation"
                  viewBox="2 2 16 16"
                >
                  <path
                    className="ui-icon__outline at"
                    d="M6.98608 2.06583L6.26939 2.28186C4.96586 2.67478 4.00847 3.78795 3.815 5.13559C3.51803 7.20432 4.18226 9.62236 5.78271 12.3944C7.37979 15.1606 9.13769 16.9432 11.0729 17.723C12.3425 18.2346 13.7938 17.9591 14.7877 17.0179L15.3305 16.5039C16.0579 15.8149 16.1634 14.694 15.5771 13.8815L14.2205 12.0013C13.8448 11.4807 13.1795 11.2568 12.5655 11.4445L10.5148 12.0715L10.4618 12.0819C10.2357 12.1149 9.71443 11.6259 9.06429 10.4998C8.38415 9.32175 8.24319 8.63292 8.43096 8.45535L9.47432 7.48242C10.2563 6.75326 10.4873 5.60722 10.0489 4.63206L9.38744 3.16069C8.97554 2.24445 7.9479 1.77591 6.98608 2.06583ZM8.47536 3.57071L9.13681 5.04209C9.39965 5.62676 9.26114 6.31388 8.79232 6.75107L7.74642 7.72639C7.07732 8.35912 7.29894 9.44212 8.19827 10.9998C9.04447 12.4655 9.81646 13.1898 10.646 13.0642L10.7703 13.0376L12.8579 12.4008C13.0626 12.3383 13.2843 12.4129 13.4096 12.5864L14.7662 14.4666C15.0593 14.8728 15.0066 15.4333 14.6428 15.7778L14.1001 16.2918C13.3902 16.9641 12.3535 17.1609 11.4467 16.7955C9.74859 16.1112 8.14378 14.4839 6.64873 11.8944C5.15063 9.29963 4.54433 7.09248 4.80485 5.27769C4.94304 4.31509 5.6269 3.51997 6.55799 3.23931L7.27468 3.02328C7.75559 2.87832 8.26941 3.11259 8.47536 3.57071Z"
                  />
                  <path
                    className="ui-icon__filled"
                    d="M6.98608 2.06583C7.89447 1.79202 8.86156 2.19473 9.3132 3.01218L9.38744 3.16069L10.0489 4.63206C10.4615 5.54986 10.2811 6.61902 9.60656 7.34954L9.47432 7.48242L8.43096 8.45535C8.24319 8.63292 8.38415 9.32175 9.06429 10.4998C9.67618 11.5596 10.1739 12.0552 10.4189 12.0823L10.4618 12.0819L10.5148 12.0715L12.5655 11.4445C13.1323 11.2713 13.7428 11.4487 14.1288 11.8865L14.2205 12.0013L15.5771 13.8815C16.1289 14.6462 16.068 15.6841 15.4524 16.3779L15.3305 16.5039L14.7877 17.0179C13.7938 17.9591 12.3425 18.2346 11.0729 17.723C9.13769 16.9432 7.37979 15.1606 5.78271 12.3944C4.18226 9.62236 3.51803 7.20432 3.815 5.13559C3.99879 3.85533 4.87203 2.78668 6.07651 2.34614L6.26939 2.28186L6.98608 2.06583Z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/MediaGalleryTile Media Gallery Tile Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        style={
          Object {
            "height": "250px",
            "width": "400px",
          }
        }
      >
        <div
          className="ms-Stack css-74 css-2"
        >
          <div
            className="ms-Stack css-75 css-3"
          >
            <div
              className="ms-Persona ms-Persona--size100 root-4"
            >
              <div
                className="ms-Persona-coin ms-Persona--size100 coin-11"
                role="presentation"
              >
                <div
                  className="ms-Persona-imageArea imageArea-13"
                  role="presentation"
                >
                  <div
                    aria-hidden="true"
                    className="ms-Persona-initials initials-16"
                  >
                    <i
                      aria-hidden={true}
                      className="root-37 root-18"
                      data-icon-name="Contact"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <label
            className="ms-Label css-73 root-21"
          >
            hello
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/MicrophoneSettings Microphone Settings 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        className="ms-Dropdown-container"
      >
        <label
          className="ms-Label ms-Dropdown-label label-19"
          id="Dropdown0-label"
        >
          Microphone
        </label>
        <div
          aria-disabled={false}
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="Dropdown0-label Dropdown0-option"
          className="ms-Dropdown dropdown-3"
          data-is-focusable={true}
          id="Dropdown0"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <span
            aria-atomic={true}
            aria-invalid={false}
            aria-live="polite"
            aria-posinset={1}
            aria-selected={true}
            aria-setsize={3}
            className="ms-Dropdown-title title-4"
            id="Dropdown0-option"
            role="option"
          >
            Headphones (Buy More Brand)
          </span>
          <span
            className="ms-Dropdown-caretDownWrapper caretDownWrapper-5"
          >
            <i
              aria-hidden={true}
              className="root-37 ms-Dropdown-caretDown caretDown-21"
              data-icon-name="ChevronDown"
            >
              
            </i>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ParticipantStackItem Participant Stack Item Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        onContextMenu={[Function]}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="ms-Persona ms-Persona--size32 ms-Persona--online root-2"
        >
          <div
            className="ms-Persona-coin ms-Persona--size32 coin-9"
            role="presentation"
          >
            <div
              className="ms-Persona-imageArea imageArea-11"
              role="presentation"
            >
              <div
                aria-hidden="true"
                className="ms-Persona-initials initials-14"
              >
                <span>
                  J
                </span>
              </div>
              <div
                className="ms-Persona-presence presence-15"
                role="presentation"
              />
            </div>
          </div>
          <div
            className="ms-Persona-details details-3"
          >
            <div
              className="ms-Persona-primaryText primaryText-4"
              dir="auto"
            >
              <div
                className="ms-TooltipHost root-17"
                onBlurCapture={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                Jim
              </div>
            </div>
            <div
              className="ms-Persona-secondaryText secondaryText-5"
              dir="auto"
            />
            <div
              className="ms-Persona-tertiaryText tertiaryText-6"
              dir="auto"
            />
            <div
              className="ms-Persona-optionalText optionalText-7"
              dir="auto"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/ReadReceipt Read Reciept Icon Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        className="ms-TooltipHost root-2"
        onBlurCapture={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          aria-hidden={true}
          className="root_de478240 css-58"
          role="presentation"
          style={Object {}}
        >
          <svg
            className="svg_de478240"
            viewBox="0 0 2048 2048"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1491 595l90 90-749 749-365-365 90-90 275 275 659-659zM1024 0q141 0 272 36t245 103 207 160 160 208 103 245 37 272q0 141-36 272t-103 245-160 207-208 160-245 103-272 37q-141 0-272-36t-245-103-207-160-160-208-103-244-37-273q0-141 36-272t103-245 160-207 208-160T751 37t273-37zm0 1920q123 0 237-32t214-90 182-141 140-181 91-214 32-238q0-123-32-237t-90-214-141-182-181-140-214-91-238-32q-123 0-237 32t-214 90-182 141-140 181-91 214-32 238q0 123 32 237t90 214 141 182 181 140 214 91 238 32z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/SendBox Send Box Story Book Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        style={
          Object {
            "width": "480px",
          }
        }
      >
        <div
          className="ms-Stack css-60 css-2"
        >
          <div
            className="ms-TextField ms-TextField--multiline ms-TextField--borderless css-59 root-4"
          >
            <div
              className="ms-TextField-wrapper wrapper-5"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-6"
              >
                <textarea
                  aria-invalid={false}
                  aria-label="Type"
                  className="ms-TextField-field ms-TextField--unresizable css-61 field-7"
                  id="sendbox"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Type a new message"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="css-63 sendIconWrapper"
            onClick={[Function]}
          >
            <div
              className="css-64"
            />
          </div>
        </div>
        <div
          className="ui-alert aw ax ay az ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br bs bt bu"
          data-uses-unhanded-props={true}
          onFocus={[Function]}
        >
          <div
            className="ui-box aw bv ui-alert__body"
            data-uses-unhanded-props={true}
            id="alert-body-1"
          >
            <div
              className="ui-box bv ui-alert__content"
              data-uses-unhanded-props={true}
              dir="auto"
            >
              Please wait 30 seconds to send new messages
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/TypingIndicator Typing Indicator Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        className="css-68"
      >
        <span
          className="css-69"
        >
          User1, 
        </span>
        <span
          className="css-69"
        >
          User2
        </span>
        <span
          className="css-69"
        >
           and 5 others are typing...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Components/VideoTile Video Tile Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        className="ms-Stack css-4"
      >
        <div
          className="ms-Stack css-5"
          style={
            Object {
              "bottom": "50%",
              "left": "50%",
              "position": "absolute",
            }
          }
        >
          <div
            className="ms-Persona ms-Persona--size100 root-6"
          >
            <div
              className="ms-Persona-coin ms-Persona--size100 coin-13"
              role="presentation"
            >
              <div
                className="ms-Persona-imageArea imageArea-15"
                role="presentation"
              >
                <div
                  aria-hidden="true"
                  className="ms-Persona-initials initials-18"
                >
                  <span>
                    JK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Stack css-21"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Composites/GroupCall Group Call Composite 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        style={
          Object {
            "height": "100%",
            "margin": "20px auto",
            "maxHeight": "35rem",
            "maxWidth": "50rem",
            "width": "100%",
          }
        }
      >
        
        Please fill in Connection String to run group call widget.
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Composites/GroupChat Group Chat Composite 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        style={
          Object {
            "border": "1px solid",
            "height": "100%",
            "margin": "20px auto",
            "maxHeight": "30rem",
            "maxWidth": "50rem",
            "padding": "0 10px",
            "width": "100%",
          }
        }
      >
        Please fill in Connection String or required params to run GroupChat.
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots ACS Composites/OneToOneCall One To One Call Composite Component 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="wrapper root-0"
    style={
      Object {
        "display": "inherit",
      }
    }
  >
    <div
      className="wrapper"
      data-uses-unhanded-props={true}
      dir="ltr"
    >
      <div
        style={
          Object {
            "height": "90vh",
            "width": "90vw",
          }
        }
      >
        
        <div
          className="ms-Stack css-2"
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Please enter required information below.
        </div>
      </div>
    </div>
  </div>
</div>
`;
